--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -341,7 +341,13 @@ config	BOEFFLA_WL_BLOCKER
 	---help---
 	  Allow kernel driver to do periodic jobs without resuming the full system
 	  This option can increase battery life on android powered smartphone.
+	  
 config PM_SYNC_BEFORE_SUSPEND
 	bool "Sync file systems before suspend"
 	depends on SUSPEND
 	default y
+
+ config	BOEFFLA_WL_BLOCKER
+ 	bool "Boeffla generic wakelock blocker driver"
+ 	depends on PM
+ 	default N
